# Fast-Api-hello-world

hello-fastapi/: README.md  pyproject.toml
hello-fastapi/todos/: main.py
