[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Muhammad Abubakar Khalid <abubakarzzz07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlmodel = "^0.0.22"
uvicorn = "^0.32.1"

[tool.poetry.scripts]
dev="todos.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
